welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: identifier expected but integer literal found.
		avance(nbPas:3)
                             ^SnakeBuggle:6: error: ')' expected but '}' found.
	}
        ^