welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	var PosF:Boolean = false
	while(!PosF){
		avance(nbPas:3)
	}
}
